--- a/css/COMPILED-PAGES/home.css
+++ b/css/COMPILED-PAGES/home.css
@@ -7823,7 +7823,7 @@ a.text-dark:hover, a.text-dark:focus {
 .my-header-inverse {
   position: relative;
   width: 100%;
-  height: 120px;
+  height: 110px;
   z-index: 1000;
   background-color: #f1f1f1; }
   .my-header-inverse .header-lg {
@@ -8155,8 +8155,8 @@ a {
     padding: 5px 0; }
   .footer .footer-top {
     height: auto;
-    background-color: #35636a;
-    padding: 120px 0; }
+    padding: 120px 0;
+    background: linear-gradient(to right, #232526, #414345); }
     .footer .footer-top .container {
       width: 100%;
       height: 100%; }
@@ -8231,7 +8231,7 @@ a {
       text-align: center; }
   .footer .footer-bottom-text {
     text-align: center;
-    background: linear-gradient(to top, #2c3e50, #35636a);
+    background: linear-gradient(to right, #232526, #414345);
     line-height: 75px;
     margin: 0;
     padding: 0px 50px;
@@ -8300,15 +8300,52 @@ body {
   .container {
     max-width: none; } }
 /*Faded swiper*/
+.top-img-container {
+  position: relative;
+  max-width: 100%;
+  width: 100%;
+  height: calc(100vh - 110px);
+  min-height: 400px;
+  background: url(/images/OT1C850.jpg);
+  background-size: cover; }
+  .top-img-container .overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 0.5;
+    background-color: #c4dadb; }
+  .top-img-container .top-img-container-caption {
+    position: absolute;
+    margin: 20px;
+    padding: 50px;
+    width: 100%;
+    max-width: 500px; }
+    .top-img-container .top-img-container-caption h2,
+    .top-img-container .top-img-container-caption h4 {
+      color: gold;
+      text-shadow: 0 2px 1px #fff, 0 -3px 4px #fff;
+      text-align: center;
+      font-weight: bold; }
+    .top-img-container .top-img-container-caption b {
+      line-height: 2;
+      text-align: center;
+      font-size: 17px; }
+    .top-img-container .top-img-container-caption .contact-us {
+      margin: 25px auto;
+      padding: 8px 20px;
+      border-radius: 30px;
+      border: 1px solid #fff;
+      color: #000; }
+
 .head-with-border {
   position: relative;
   z-index: 2; }
   .head-with-border h2 {
     text-align: center;
-    background: linear-gradient(to right, #a62a2a, #dc3545);
+    background: linear-gradient(to right, #232526, #414345);
     color: #fff;
     margin: 30px auto 15px auto;
-    border-radius: 45px;
+    border-radius: 5px;
     width: 250px;
     padding: 10px 15px;
     font-size: 1.5rem !important; }
@@ -8316,7 +8353,7 @@ body {
       content: "";
       width: 100%;
       height: 1px;
-      background-color: #a62a2a;
+      background: linear-gradient(to right, #232526, #414345);
       position: absolute;
       left: 0;
       top: 50%;
@@ -8345,13 +8382,13 @@ body {
     color: #35636a !important; }
   .who-us .swiper-container .slide-content {
     background-position: center;
-    background-size: cover; }
+    background-size: cover;
+    background-color: #f1f1f1; }
     .who-us .swiper-container .slide-content img {
-      width: 100%;
+      width: 50%;
       height: 350px;
       max-height: 350px; }
     .who-us .swiper-container .slide-content .caption {
-      background-color: #f1f1f1;
       padding: 50px;
       position: absolute;
       left: 60%;
