--- a/css/sass/layout/_footer.scss
+++ b/css/sass/layout/_footer.scss
@@ -1,4 +1,5 @@
 $footer-color: #35636a;
+$footer-background: linear-gradient(to right, #232526, #414345);
 // Start Footer Style
 .footer {
     transition: $transation;
@@ -20,8 +21,9 @@ $footer-color: #35636a;
     }
     .footer-top {
         height: auto;
-        background-color: $footer-color;
+        //background-color: $footer-color;
         padding: 120px 0;
+        background: $footer-background;
         .container {
             width: 100%;
             height: 100%;
@@ -122,7 +124,8 @@ $footer-color: #35636a;
     }
     .footer-bottom-text {
         text-align: center;
-        background: linear-gradient(to top, #2c3e50, #35636a);
+        //background: linear-gradient(to top, #2c3e50, #35636a);
+        background: $footer-background;
         line-height: 75px;
         margin: 0;
         padding: 0px 50px;
