--- a/css/sass/style.css
+++ b/css/sass/style.css
@@ -20,7 +20,7 @@
 .my-header-inverse {
   position: relative;
   width: 100%;
-  height: 120px;
+  height: 110px;
   z-index: 1000;
   background-color: #f1f1f1; }
   .my-header-inverse .header-lg {
@@ -352,8 +352,8 @@ a {
     padding: 5px 0; }
   .footer .footer-top {
     height: auto;
-    background-color: #35636a;
-    padding: 120px 0; }
+    padding: 120px 0;
+    background: linear-gradient(to right, #232526, #414345); }
     .footer .footer-top .container {
       width: 100%;
       height: 100%; }
@@ -428,7 +428,7 @@ a {
       text-align: center; }
   .footer .footer-bottom-text {
     text-align: center;
-    background: linear-gradient(to top, #2c3e50, #35636a);
+    background: linear-gradient(to right, #232526, #414345);
     line-height: 75px;
     margin: 0;
     padding: 0px 50px;
