--- a/css/COMPILED-PAGES/home.scss
+++ b/css/COMPILED-PAGES/home.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/swiper/css/swiper.min.css";
+@import "../sass/swiper.min.css";
 @import "../sass/main.scss";
 @import "../sass/style.scss";
 @import "../sass/pages/home";
