--- a/css/COMPILED-PAGES/ar-home.css
+++ b/css/COMPILED-PAGES/ar-home.css
@@ -8305,7 +8305,7 @@ body {
   width: 100%;
   height: calc(100vh - 110px);
   min-height: 400px;
-  background: url(/images/OT1C850.jpg);
+  background: url(/images/OT1C6E0.jpg);
   background-size: cover; }
   .top-img-container .overlay {
     width: 100%;
