change place bg

--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: calc(100vh - 110px);
     min-height: 400px;
-    background: url(/images/111.jpeg);
+    //background: url(/images/111.jpeg);
     background-size: cover;
     .overlay {
         width: 100%;
