--- a/css/COMPILED-PAGES/ar-home.css
+++ b/css/COMPILED-PAGES/ar-home.css
@@ -8304,8 +8304,7 @@ body {
   max-width: 100%;
   width: 100%;
   height: calc(100vh - 110px);
-  min-height: 400px;
-  background-size: cover; }
+  min-height: 400px; }
   .top-img-container .overlay {
     width: 100%;
     height: 100%;
