--- a/css/COMPILED-PAGES/test.css
+++ b/css/COMPILED-PAGES/test.css
@@ -7823,7 +7823,8 @@ a.text-dark:hover, a.text-dark:focus {
 .my-header-inverse {
   position: relative;
   width: 100%;
-  height: 110px;
+  min-height: 70px;
+  max-height: 110px;
   z-index: 1000;
   background-color: #f1f1f1; }
   .my-header-inverse .header-lg {
@@ -7877,6 +7878,24 @@ a.text-dark:hover, a.text-dark:focus {
         .my-header-inverse .header-lg .my-header-bottom ul .my-bottom-item:hover {
           text-shadow: 0 2px 10px red, 0 -2px 10px white;
           font-size: 22px; }
+
+.header-sm {
+  height: 70px !important; }
+  .header-sm .navbar {
+    padding: 0 1rem !important; }
+  .header-sm .nav-item {
+    list-style: none !important; }
+    .header-sm .nav-item .logo img {
+      margin: 0 !important; }
+    .header-sm .nav-item input {
+      width: 100%;
+      font-size: 20px;
+      font-weight: bold;
+      padding: 5px;
+      color: #fff; }
+      .header-sm .nav-item input:hover {
+        text-shadow: 0 2px 10px red, 0 -2px 10px white;
+        font-size: 22px; }
 
 .my-header-inverse .info-item {
   color: #fff;
@@ -8267,6 +8286,10 @@ body {
   min-height: 1500px;
   position: relative; }
 
+@media only screen and (max-width: 1000px) {
+  .container {
+    padding: 0px !important; } }
+
 .visible-xs {
   display: none; }
   @media screen and (max-width: 768px) {
@@ -8280,17 +8303,18 @@ body {
 .col-xs-6 {
   width: 50% !important; }
 
-@media screen and (max-width: 480px) {
-  .col-xs-6 {
+@media screen and (max-width: 580px) {
+  .col-xs-12 {
     width: 100% !important; } }
 .hidden {
   opacity: 0; }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   html,
   body {
-    min-width: 270px; }
+    min-width: 320px;
+    overflow-x: hidden; }
 
   .must-hidden {
     display: none !important;
@@ -8305,9 +8329,8 @@ body {
   max-width: 100%;
   width: 100%;
   height: calc(100vh - 110px);
-  min-height: 400px;
-  background: url(/images/OT1C850.jpg);
-  background-size: cover; }
+  min-height: 500px;
+  background-position: center; }
   .top-img-container .overlay {
     width: 100%;
     height: 100%;
@@ -8318,8 +8341,13 @@ body {
     position: absolute;
     margin: 20px;
     padding: 50px;
-    width: 100%;
-    max-width: 500px; }
+    width: 100%; }
+    @media only screen and (max-width: 480px) {
+      .top-img-container .top-img-container-caption {
+        padding: 10px !important;
+        margin: 20px 5px;
+        text-align: center;
+        overflow: hidden; } }
     .top-img-container .top-img-container-caption h2,
     .top-img-container .top-img-container-caption h4 {
       color: gold;
@@ -8334,7 +8362,7 @@ body {
       margin: 25px auto;
       padding: 8px 20px;
       border-radius: 30px;
-      border: 1px solid #fff;
+      border: 2px solid #fff;
       color: #000; }
 
 .head-with-border {
@@ -8368,6 +8396,8 @@ body {
   width: 100%;
   height: 400px;
   position: relative !important; }
+  .who-us .swiper-container .col-sm-6 {
+    width: 50%; }
   .who-us .swiper-container .swiper-wrapper {
     height: 350px;
     width: 100%;
@@ -8385,17 +8415,15 @@ body {
     background-size: cover;
     background-color: #f1f1f1; }
     .who-us .swiper-container .slide-content img {
-      width: 50%;
+      width: 100%;
       height: 350px;
       max-height: 350px; }
     .who-us .swiper-container .slide-content .caption {
-      padding: 50px;
-      position: absolute;
-      left: 60%;
-      top: 50px;
-      justify-content: center;
-      align-items: center;
+      width: 100%;
       z-index: 1000; }
+      @media only screen and (max-width: 768px) {
+        .who-us .swiper-container .slide-content .caption {
+          text-align: center; } }
       .who-us .swiper-container .slide-content .caption .caption-title {
         color: #35636a;
         text-shadow: 0 5px 10px #a62a2a, 0 -5px 10px red; }
@@ -8403,6 +8431,9 @@ body {
         padding: 5px; }
       .who-us .swiper-container .slide-content .caption .btn {
         border-radius: 50px; }
+        @media only screen and (max-width: 768px) {
+          .who-us .swiper-container .slide-content .caption .btn {
+            margin-top: 5px; } }
   .who-us .swiper-container .swiper-pagination-bullet {
     width: 12px;
     height: 12px; }
@@ -8428,12 +8459,13 @@ body {
       margin-top: 5px; }
   .why-us .swiper-slide {
     background-position: center;
-    background-size: cover; }
+    background-size: cover;
+    width: 100%; }
   .why-us .cube-container {
     position: relative; }
   .why-us .why-us-text {
     line-height: 2;
-    padding: 50px !important; }
+    padding: 10px 3rem !important; }
     .why-us .why-us-text .btn {
       width: 150px;
       border-radius: 50px;
@@ -8450,7 +8482,8 @@ body {
     width: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
-    overflow: hidden; }
+    overflow: hidden;
+    left: 25px; }
     .projects .swiper-3d .swiper-slide {
       background-position: center;
       background-size: cover;
@@ -8475,21 +8508,31 @@ body {
     border-radius: 45px;
     box-shadow: 0 25px 25px #f1f1f1, 0 -25px 25px #f1f1f1; }
 
-.our-clients .client-img {
-  max-width: 250px;
-  width: auto;
-  height: 200px; }
+.our-clients .client-box {
+  position: relative; }
+  .our-clients .client-box .client-img {
+    max-width: 100%;
+    width: auto;
+    height: 200px; }
+  .our-clients .client-box .client-text {
+    margin: 0 0.5rem; }
 
-.shop-with-us .shop-box .shop-img {
-  max-width: 100%;
-  width: 100%;
-  height: 300px; }
-  .shop-with-us .shop-box .shop-img:hover {
-    -prefixes-animation: fadeInOut 3s infinite linear;
-    animation: fadeInOut 3s infinite linear; }
-.shop-with-us .shop-box .link {
-  color: #007bff !important;
-  text-decoration: none; }
+.shop-with-us .shop-box {
+  position: relative;
+  padding: 5px; }
+  .shop-with-us .shop-box .shop-img {
+    max-width: 100%;
+    width: 100%;
+    height: 300px; }
+    .shop-with-us .shop-box .shop-img:hover {
+      -prefixes-animation: fadeInOut 3s infinite linear;
+      animation: fadeInOut 3s infinite linear; }
+    @media only screen and (max-width: 768px) {
+      .shop-with-us .shop-box .shop-img {
+        height: 200px; } }
+  .shop-with-us .shop-box .link {
+    color: #007bff !important;
+    text-decoration: none; }
 
 .my-location #map {
   width: 100%;
