--- a/css/sass/layout/_header.scss
+++ b/css/sass/layout/_header.scss
@@ -2,7 +2,8 @@
 .my-header-inverse {
     position: relative;
     width: 100%;
-    height: 110px;
+    min-height: 70px;
+    max-height: 110px;
     z-index: 1000;
     background-color: #f1f1f1;
     .header-lg {
@@ -68,6 +69,30 @@
                         font-size: 22px;
                     }
                 }
+            }
+        }
+    }
+}
+
+.header-sm {
+    height: 70px !important;
+    .navbar {
+        padding: 0 1rem !important;
+    }
+    .nav-item {
+        list-style: none !important;
+        .logo img {
+            margin: 0 !important;
+        }
+        input {
+            width: 100%;
+            font-size: 20px;
+            font-weight: bold;
+            padding: 5px;
+            color: #fff;
+            &:hover {
+                text-shadow: 0 2px 10px red, 0 -2px 10px white;
+                font-size: 22px;
             }
         }
     }
