--- a/css/sass/pages/_global.scss
+++ b/css/sass/pages/_global.scss
@@ -11,6 +11,12 @@ body {
     //padding: 10px;
 }
 
+.container {
+    @media only screen and (max-width: 1000px) {
+        padding: 0px !important;
+    }
+}
+
 .visible-xs {
     display: none;
     @media screen and (max-width: 768px) {
@@ -27,8 +33,8 @@ body {
     width: 50% !important;
 }
 
-@media screen and (max-width: 480px) {
-    .col-xs-6 {
+@media screen and (max-width: 580px) {
+    .col-xs-12 {
         width: 100% !important;
     }
 }
@@ -40,10 +46,11 @@ body {
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     html,
     body {
-        min-width: 270px;
+        min-width: 320px;
+        overflow-x: hidden;
     }
     // same as hidden on sm , with this code we can hidden any block we want
     .must-hidden {
