--- a/css/sass/pages/_test.scss
+++ b/css/sass/pages/_test.scss
@@ -5,7 +5,8 @@
     max-width: 100%;
     width: 100%;
     height: calc(100vh - 110px);
-    min-height: 400px;
+    min-height: 500px;
+    background-position: center;
     //background: url(/images/111.jpeg);
     .overlay {
         width: 100%;
@@ -19,7 +20,12 @@
         margin: 20px;
         padding: 50px;
         width: 100%;
-        max-width: 500px;
+        @media only screen and (max-width: 480px) {
+            padding: 10px !important;
+            margin: 20px 5px;
+            text-align: center;
+            overflow: hidden;
+        }
         h2,
         h4 {
             color: gold;
@@ -83,6 +89,9 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
         width: 100%;
         height: 400px;
         position: relative !important;
+        .col-sm-6 {
+            width: 50%;
+        }
         .swiper-wrapper {
             height: 350px;
             width: 100%;
@@ -104,18 +113,15 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
             background-size: cover;
             background-color: #f1f1f1;
             img {
-                width: 50%;
+                width: 100%;
                 height: 350px;
                 max-height: 350px;
             }
             .caption {
-                //display: none;
-                padding: 50px;
-                position: absolute;
-                left: 60%;
-                top: 50px;
-                justify-content: center;
-                align-items: center;
+                width: 100%;
+                @media only screen and (max-width: 768px) {
+                    text-align: center;
+                }
                 z-index: 1000;
                 .caption-title {
                     color: #35636a;
@@ -126,6 +132,9 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
                 }
                 .btn {
                     border-radius: 50px;
+                    @media only screen and (max-width: 768px) {
+                        margin-top: 5px;
+                    }
                     //background: linear-gradient(to right, #a62a2a, #dc3545);
                     //color: #fff;
                 }
@@ -164,13 +173,14 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
     .swiper-slide {
         background-position: center;
         background-size: cover;
+        width: 100%;
     }
     .cube-container {
         position: relative;
     }
     .why-us-text {
         line-height: 2;
-        padding: 50px !important;
+        padding: 10px 3rem !important;
         .btn {
             width: 150px;
             border-radius: 50px;
@@ -196,6 +206,7 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
         padding-top: 50px;
         padding-bottom: 50px;
         overflow: hidden;
+        left: 25px;
         .swiper-slide {
             background-position: center;
             background-size: cover;
@@ -228,21 +239,32 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
 }
 
 .our-clients {
-    .client-img {
-        max-width: 250px;
-        width: auto;
-        height: 200px;
+    .client-box {
+        position: relative;
+        .client-img {
+            max-width: 100%;
+            width: auto;
+            height: 200px;
+        }
+        .client-text {
+            margin: 0 0.5rem;
+        }
     }
 }
 
 .shop-with-us {
     .shop-box {
+        position: relative;
+        padding: 5px;
         .shop-img {
             max-width: 100%;
             width: 100%;
             height: 300px;
             &:hover {
                 @include prefixer(animation, fadeInOut 3s infinite linear, webkit moz);
+            }
+            @media only screen and (max-width: 768px) {
+                height: 200px;
             }
         }
         .link {
