--- a/css/sass/style.css
+++ b/css/sass/style.css
@@ -20,7 +20,8 @@
 .my-header-inverse {
   position: relative;
   width: 100%;
-  height: 110px;
+  min-height: 70px;
+  max-height: 110px;
   z-index: 1000;
   background-color: #f1f1f1; }
   .my-header-inverse .header-lg {
@@ -74,6 +75,24 @@
         .my-header-inverse .header-lg .my-header-bottom ul .my-bottom-item:hover {
           text-shadow: 0 2px 10px red, 0 -2px 10px white;
           font-size: 22px; }
+
+.header-sm {
+  height: 70px !important; }
+  .header-sm .navbar {
+    padding: 0 1rem !important; }
+  .header-sm .nav-item {
+    list-style: none !important; }
+    .header-sm .nav-item .logo img {
+      margin: 0 !important; }
+    .header-sm .nav-item input {
+      width: 100%;
+      font-size: 20px;
+      font-weight: bold;
+      padding: 5px;
+      color: #fff; }
+      .header-sm .nav-item input:hover {
+        text-shadow: 0 2px 10px red, 0 -2px 10px white;
+        font-size: 22px; }
 
 .my-header-inverse .info-item {
   color: #fff;
@@ -464,6 +483,10 @@ body {
   min-height: 1500px;
   position: relative; }
 
+@media only screen and (max-width: 1000px) {
+  .container {
+    padding: 0px !important; } }
+
 .visible-xs {
   display: none; }
   @media screen and (max-width: 768px) {
@@ -477,17 +500,18 @@ body {
 .col-xs-6 {
   width: 50% !important; }
 
-@media screen and (max-width: 480px) {
-  .col-xs-6 {
+@media screen and (max-width: 580px) {
+  .col-xs-12 {
     width: 100% !important; } }
 .hidden {
   opacity: 0; }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   html,
   body {
-    min-width: 270px; }
+    min-width: 320px;
+    overflow-x: hidden; }
 
   .must-hidden {
     display: none !important;
