--- a/css/sass/pages/_global.scss
+++ b/css/sass/pages/_global.scss
@@ -3,6 +3,7 @@ body {
     margin: 0px !important;
     padding: 0px !important;
     background-color: #f1f1f1;
+    overflow-x: hidden;
 }
 
 .my-page {
