--- a/css/COMPILED-PAGES/test.css
+++ b/css/COMPILED-PAGES/test.css
@@ -1,4 +1,4 @@
-@import url(../../node_modules/swiper/css/swiper.min.css);
+@import url(../sass/swiper.min.css);
 /*!
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -7823,8 +7823,7 @@ a.text-dark:hover, a.text-dark:focus {
 .my-header-inverse {
   position: relative;
   width: 100%;
-  min-height: 70px;
-  max-height: 110px;
+  min-height: 110px;
   z-index: 1000;
   background-color: #f1f1f1; }
   .my-header-inverse .header-lg {
@@ -7880,9 +7879,12 @@ a.text-dark:hover, a.text-dark:focus {
           font-size: 22px; }
 
 .header-sm {
-  height: 70px !important; }
+  height: 70px !important;
+  box-shadow: 0 1px 5px #fff;
+  background: linear-gradient(to right, #232526, #414345) !important; }
   .header-sm .navbar {
-    padding: 0 1rem !important; }
+    padding: 0 1rem !important;
+    background: linear-gradient(to right, #232526, #414345) !important; }
   .header-sm .nav-item {
     list-style: none !important; }
     .header-sm .nav-item .logo img {
@@ -8280,7 +8282,8 @@ html,
 body {
   margin: 0px !important;
   padding: 0px !important;
-  background-color: #f1f1f1; }
+  background-color: #f1f1f1;
+  overflow-x: hidden; }
 
 .my-page {
   min-height: 1500px;
@@ -8331,6 +8334,9 @@ body {
   height: calc(100vh - 110px);
   min-height: 500px;
   background-position: center; }
+  @media only screen and (max-width: 768px) {
+    .top-img-container {
+      height: calc(100vh - 70px); } }
   .top-img-container .overlay {
     width: 100%;
     height: 100%;
@@ -8341,10 +8347,16 @@ body {
     position: absolute;
     margin: 20px;
     padding: 50px;
-    width: 100%; }
+    width: 50%; }
+    @media only screen and (max-width: 1000px) {
+      .top-img-container .top-img-container-caption {
+        padding: 35px; } }
+    @media only screen and (max-width: 768px) {
+      .top-img-container .top-img-container-caption {
+        width: 100%; } }
     @media only screen and (max-width: 480px) {
       .top-img-container .top-img-container-caption {
-        padding: 10px !important;
+        padding: 20px !important;
         margin: 20px 5px;
         text-align: center;
         overflow: hidden; } }
