--- a/css/sass/pages/_test.scss
+++ b/css/sass/pages/_test.scss
@@ -5,6 +5,9 @@
     max-width: 100%;
     width: 100%;
     height: calc(100vh - 110px);
+    @media only screen and (max-width: 768px) {
+        height: calc(100vh - 70px);
+    }
     min-height: 500px;
     background-position: center;
     //background: url(/images/111.jpeg);
@@ -19,9 +22,15 @@
         position: absolute;
         margin: 20px;
         padding: 50px;
-        width: 100%;
+        width: 50%;
+        @media only screen and (max-width: 1000px) {
+            padding: 35px;
+        }
+        @media only screen and (max-width: 768px) {
+            width: 100%;
+        }
         @media only screen and (max-width: 480px) {
-            padding: 10px !important;
+            padding: 20px !important;
             margin: 20px 5px;
             text-align: center;
             overflow: hidden;
