--- a/css/sass/style.css
+++ b/css/sass/style.css
@@ -20,8 +20,7 @@
 .my-header-inverse {
   position: relative;
   width: 100%;
-  min-height: 70px;
-  max-height: 110px;
+  min-height: 110px;
   z-index: 1000;
   background-color: #f1f1f1; }
   .my-header-inverse .header-lg {
@@ -77,9 +76,12 @@
           font-size: 22px; }
 
 .header-sm {
-  height: 70px !important; }
+  height: 70px !important;
+  box-shadow: 0 1px 5px #fff;
+  background: linear-gradient(to right, #232526, #414345) !important; }
   .header-sm .navbar {
-    padding: 0 1rem !important; }
+    padding: 0 1rem !important;
+    background: linear-gradient(to right, #232526, #414345) !important; }
   .header-sm .nav-item {
     list-style: none !important; }
     .header-sm .nav-item .logo img {
@@ -477,7 +479,8 @@ html,
 body {
   margin: 0px !important;
   padding: 0px !important;
-  background-color: #f1f1f1; }
+  background-color: #f1f1f1;
+  overflow-x: hidden; }
 
 .my-page {
   min-height: 1500px;
