--- a/css/sass/pages/_test.scss
+++ b/css/sass/pages/_test.scss
@@ -98,6 +98,10 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
         width: 100%;
         height: 400px;
         position: relative !important;
+        @media only screen and (max-width: 480px) {
+            height: 500px;
+            max-height: 500px;
+        }
         .col-sm-6 {
             width: 50%;
         }
@@ -105,6 +109,10 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
             height: 350px;
             width: 100%;
             margin-bottom: 20px;
+            @media only screen and (max-width: 480px) {
+                height: 450px;
+                max-height: 450px;
+            }
         }
         .swiper-slide {
             margin: 0 25px !important;
@@ -116,6 +124,9 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
             position: absolute;
             top: 175px !important;
             color: #35636a !important;
+            @media only screen and (max-width: 480px) {
+                top: 225px !important;
+            }
         }
         .slide-content {
             background-position: center;
@@ -125,6 +136,10 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
                 width: 100%;
                 height: 350px;
                 max-height: 350px;
+                @media only screen and (max-width: 480px) {
+                    height: 450px;
+                    max-height: 450px;
+                }
             }
             .caption {
                 width: 100%;
@@ -137,10 +152,14 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
                     text-shadow: 0 5px 10px #a62a2a, 0 -5px 10px red;
                 }
                 .text {
-                    padding: 5px;
+                    padding: 10px;
                 }
                 .btn {
                     border-radius: 50px;
+                    padding: 10px;
+                    @media only screen and (min-width: 768px) {
+                        margin: 5px 0 0 0.5rem;
+                    }
                     @media only screen and (max-width: 768px) {
                         margin-top: 5px;
                     }
