--- a/css/COMPILED-PAGES/test.css
+++ b/css/COMPILED-PAGES/test.css
@@ -8410,8 +8410,7 @@ body {
   position: relative !important; }
   @media only screen and (max-width: 480px) {
     .who-us .swiper-container {
-      height: 500px;
-      max-height: 500px; } }
+      height: 500px; } }
   .who-us .swiper-container .col-sm-6 {
     width: 50%; }
   .who-us .swiper-container .swiper-wrapper {
@@ -8420,10 +8419,11 @@ body {
     margin-bottom: 20px; }
     @media only screen and (max-width: 480px) {
       .who-us .swiper-container .swiper-wrapper {
-        height: 450px;
-        max-height: 450px; } }
+        height: 450px; } }
+  @media only screen and (max-width: 480px) {
+    .who-us .swiper-container .swiper-pagination {
+      bottom: 50px; } }
   .who-us .swiper-container .swiper-slide {
-    margin: 0 25px !important;
     background-position: center;
     background-size: cover; }
   .who-us .swiper-container .swiper-button-white {
@@ -8441,12 +8441,10 @@ body {
       width: 100%;
       height: 350px;
       max-height: 350px; }
-      @media only screen and (max-width: 480px) {
-        .who-us .swiper-container .slide-content img {
-          height: 450px;
-          max-height: 450px; } }
     .who-us .swiper-container .slide-content .caption {
       width: 100%;
+      height: 350px;
+      max-height: 350px;
       z-index: 1000; }
       @media only screen and (max-width: 768px) {
         .who-us .swiper-container .slide-content .caption {
