--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -5,7 +5,11 @@
     max-width: 100%;
     width: 100%;
     height: calc(100vh - 110px);
-    min-height: 400px;
+    @media only screen and (max-width: 768px) {
+        height: calc(100vh - 70px);
+    }
+    min-height: 500px;
+    background-position: center;
     //background: url(/images/111.jpeg);
     .overlay {
         width: 100%;
@@ -18,8 +22,19 @@
         position: absolute;
         margin: 20px;
         padding: 50px;
-        width: 100%;
-        max-width: 500px;
+        width: 50%;
+        @media only screen and (max-width: 1000px) {
+            padding: 35px;
+        }
+        @media only screen and (max-width: 768px) {
+            width: 100%;
+        }
+        @media only screen and (max-width: 480px) {
+            padding: 20px !important;
+            margin: 20px 5px;
+            text-align: center;
+            overflow: hidden;
+        }
         h2,
         h4 {
             color: gold;
@@ -83,13 +98,27 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
         width: 100%;
         height: 400px;
         position: relative !important;
+        @media only screen and (max-width: 480px) {
+            height: 500px;
+        }
+        .col-sm-6 {
+            width: 50%;
+        }
         .swiper-wrapper {
             height: 350px;
             width: 100%;
             margin-bottom: 20px;
+            @media only screen and (max-width: 480px) {
+                height: 450px;
+            }
+        }
+        .swiper-pagination {
+            @media only screen and (max-width: 480px) {
+                bottom: 50px;
+            }
         }
         .swiper-slide {
-            margin: 0 25px !important;
+            //margin: 0 25px !important;
             background-position: center;
             background-size: cover;
         }
@@ -98,34 +127,43 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
             position: absolute;
             top: 175px !important;
             color: #35636a !important;
+            @media only screen and (max-width: 480px) {
+                top: 225px !important;
+            }
         }
         .slide-content {
             background-position: center;
             background-size: cover;
             background-color: #f1f1f1;
             img {
-                width: 50%;
+                width: 100%;
                 height: 350px;
                 max-height: 350px;
             }
             .caption {
-                //display: none;
-                padding: 50px;
-                position: absolute;
-                left: 60%;
-                top: 50px;
-                justify-content: center;
-                align-items: center;
+                width: 100%;
+                @media only screen and (max-width: 768px) {
+                    text-align: center;
+                }
+                height: 350px;
+                max-height: 350px;
                 z-index: 1000;
                 .caption-title {
                     color: #35636a;
                     text-shadow: 0 5px 10px #a62a2a, 0 -5px 10px red;
                 }
                 .text {
-                    padding: 5px;
+                    padding: 10px;
                 }
                 .btn {
                     border-radius: 50px;
+                    padding: 10px;
+                    @media only screen and (min-width: 768px) {
+                        margin: 5px 0 0 0.5rem;
+                    }
+                    @media only screen and (max-width: 768px) {
+                        margin-top: 5px;
+                    }
                     //background: linear-gradient(to right, #a62a2a, #dc3545);
                     //color: #fff;
                 }
@@ -164,13 +202,14 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
     .swiper-slide {
         background-position: center;
         background-size: cover;
+        width: 100%;
     }
     .cube-container {
         position: relative;
     }
     .why-us-text {
         line-height: 2;
-        padding: 50px !important;
+        padding: 10px 3rem !important;
         .btn {
             width: 150px;
             border-radius: 50px;
@@ -196,6 +235,7 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
         padding-top: 50px;
         padding-bottom: 50px;
         overflow: hidden;
+        left: 25px;
         .swiper-slide {
             background-position: center;
             background-size: cover;
@@ -228,21 +268,32 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
 }
 
 .our-clients {
-    .client-img {
-        max-width: 250px;
-        width: auto;
-        height: 200px;
+    .client-box {
+        position: relative;
+        .client-img {
+            max-width: 100%;
+            width: auto;
+            height: 200px;
+        }
+        .client-text {
+            margin: 0 0.5rem;
+        }
     }
 }
 
 .shop-with-us {
     .shop-box {
+        position: relative;
+        padding: 5px;
         .shop-img {
             max-width: 100%;
             width: 100%;
             height: 300px;
             &:hover {
                 @include prefixer(animation, fadeInOut 3s infinite linear, webkit moz);
+            }
+            @media only screen and (max-width: 768px) {
+                height: 200px;
             }
         }
         .link {
