--- a/css/sass/pages/_test.scss
+++ b/css/sass/pages/_test.scss
@@ -100,7 +100,6 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
         position: relative !important;
         @media only screen and (max-width: 480px) {
             height: 500px;
-            max-height: 500px;
         }
         .col-sm-6 {
             width: 50%;
@@ -111,11 +110,15 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
             margin-bottom: 20px;
             @media only screen and (max-width: 480px) {
                 height: 450px;
-                max-height: 450px;
+            }
+        }
+        .swiper-pagination {
+            @media only screen and (max-width: 480px) {
+                bottom: 50px;
             }
         }
         .swiper-slide {
-            margin: 0 25px !important;
+            //margin: 0 25px !important;
             background-position: center;
             background-size: cover;
         }
@@ -136,16 +139,14 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
                 width: 100%;
                 height: 350px;
                 max-height: 350px;
-                @media only screen and (max-width: 480px) {
-                    height: 450px;
-                    max-height: 450px;
-                }
             }
             .caption {
                 width: 100%;
                 @media only screen and (max-width: 768px) {
                     text-align: center;
                 }
+                height: 350px;
+                max-height: 350px;
                 z-index: 1000;
                 .caption-title {
                     color: #35636a;
