--- a/css/sass/components/_buttons.scss
+++ b/css/sass/components/_buttons.scss
@@ -1,32 +1,32 @@
 .toggle-btn {
-    //position: absolute;
-    //left: 200px;
-    //top: 5px;
+  //position: absolute;
+  //left: 200px;
+  //top: 5px;
+  margin-top: 5px;
+  span {
+    display: block;
+    width: 30px;
+    height: 5px;
+    background-color: $white-color;
     margin-top: 5px;
-    span {
-        display: block;
-        width: 30px;
-        height: 5px;
-        background-color: $white-color;
-        margin-top: 5px;
-    }
-    &:hover {
-        cursor: pointer;
-    }
+  }
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .header-toggle-btn {
-    span {
-        display: block;
-        width: 30px;
-        height: 5px;
-        background-color: $danger-color;
-        margin-top: 5px;
-    }
-    &:hover {
-        cursor: pointer !important;
-    }
-    /*
+  span {
+    display: block;
+    width: 30px;
+    height: 5px;
+    background-color: $danger-color;
+    margin-top: 5px;
+  }
+  &:hover {
+    cursor: pointer !important;
+  }
+  /*
     @media screen and (max-width:768px) {
         display: none !important;
     }
@@ -35,86 +35,84 @@
 
 .btn-group,
 .btn-group-vertical {
-    position: relative;
-    display: inline-flex;
-    vertical-align: middle;
-    *,
-     ::before,
-     ::after {
-        box-sizing: border-box;
-    }
+  position: relative;
+  display: inline-flex;
+  vertical-align: middle;
+  *,
+  ::before,
+  ::after {
+    box-sizing: border-box;
+  }
 }
 
-.my-btn-body {}
+.my-btn-body {
+}
 
 .main-search-tool {
-    .main-search-tool-item {
-        //margin-left: 15px;
-        .minmum,
-        .maxmum {
-            padding-left: 0px !important;
-            padding-right: 0px !important;
-        }
+  .main-search-tool-item {
+    //margin-left: 15px;
+    .minmum,
+    .maxmum {
+      padding-left: 0px !important;
+      padding-right: 0px !important;
     }
+  }
 }
 
-
-/*
 .btn {
-    &:active {
-        border-color: #000;
-    }
-    &:focus {
-        border-color: #000;
-    }
+  &:active {
+    border-color: #000;
+  }
+  &:focus {
+    border-color: $warning-color !important;
+  }
 }
-*/
 
 .my-btn {
-    background-color: rgba(63, 81, 181, 0.7);
+  background-color: rgba(63, 81, 181, 0.7);
+  color: $primary-color;
+  margin: auto;
+  &:hover {
+    background-color: #333;
     color: $primary-color;
-    margin: auto;
-    &:hover {
-        background-color: #333;
-        color: $primary-color;
-    }
+  }
 }
 
 .btn-shadow {
-    background: linear-gradient(to left, #6a2b31, #dc3545);
-    box-shadow: 0px 2px 8px #a62a2a, 0px -2px 8px #a62a2a;
-    border: none;
-    border-radius: 10px;
-    &:hover {
-        margin-left: 10px;
-        box-shadow: 0 0.5rem 4rem white;
-        font-size: larger;
-        transition: all 0.5s;
-        border-radius: 45px;
-    }
-    &:focus {
-        box-shadow: 0px 1px 5px #a62a2a, 0px -1px 5px #a62a2a;
-    }
+  background: linear-gradient(to left, #6a2b31, #dc3545);
+  box-shadow: 0px 2px 8px #a62a2a, 0px -2px 8px #a62a2a;
+  border: none;
+  border-radius: 10px;
+  &:hover {
+    margin-left: 10px;
+    box-shadow: 0 0.5rem 4rem white;
+    font-size: larger;
+    transition: all 0.5s;
+    border-radius: 45px;
+  }
+  &:focus {
+    box-shadow: 0px 1px 5px #a62a2a, 0px -1px 5px #a62a2a;
+  }
 }
 
 .btn:focus {
-    box-shadow: 0px 1px 5px #a62a2a, 0px -1px 5px #a62a2a;
+  //box-shadow: 0px 1px 5px #a62a2a, 0px -1px 5px #a62a2a;
 }
 
 .box-shadow {
-    box-shadow: 0px 1px 5px #a62a2a, 0px -1px 5px #a62a2a;
+  box-shadow: 0px 1px 5px #a62a2a, 0px -1px 5px #a62a2a;
 }
 
 .bg-shadow {
-    background: linear-gradient(to left, #6a2b31, #dc3545);
+  background: linear-gradient(to left, #6a2b31, #dc3545);
 }
 
 .carousel-indicators {
-    z-index: 1;
+  z-index: 1;
 }
 
 .centralization {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
