--- a/css/sass/helper/_mixin.scss
+++ b/css/sass/helper/_mixin.scss
@@ -1,60 +1,19 @@
-@import 'variables';
-
-/*
-** for hide or remove section from our html page
-*/
-@mixin isHidden {
-	@if $sidenav-hidden == true  {
-		display: none;
-        height: 0px !important;
-        width: 0px !important;
-	}
-}
-
-
-@mixin  isFixed {
-    @if  $header-fixed == true {
-        
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: $left-side-width;
-        right: 0;
-        overflow-x: hidden;
-        @media screen and (max-width: 767px) {
-            left:0;
-            position: relative;
-        }
-    }
-}
-
-
-
-/* 
-** Overlay : all overlay in our site must have these properties 
-*/
+@import "variables";
 
 @mixin overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
-
-/*
-** Prefixes Mixin
-** Auto Add Prefixes To Properties
-*/
-
-@mixin prefixer ($property, $value, $prefixes:()) {
-    @each $prefix in prefixes {
-        #{'-'  + $prefix + '-' + $property }: $value;
-    }
-    #{$property}:$value;
+@mixin prefixer($property, $value, $prefixes: ()) {
+  @each $prefix in prefixes {
+    #{'-'  + $prefix + '-' + $property }: $value;
+  }
+  #{$property}: $value;
 }
-
 
 /*
 ** Animation Mixin
@@ -62,14 +21,49 @@
 */
 
 @mixin keyFrame($animation-name) {
-    @-webkit-keyframes #{$animation-name} {
-        @content;
-    }
-    @-moz-keyframes #{$animation-name} {
-        @content;
-    }
-    @keyframes #{$animation-name} {
-        @content;
-    }
+  @-webkit-keyframes #{$animation-name} {
+    @content;
+  }
+  @-moz-keyframes #{$animation-name} {
+    @content;
+  }
+  @keyframes #{$animation-name} {
+    @content;
+  }
 }
 
+@keyframes bgcolors {
+  0% {
+    background-color: #017aba;
+  }
+  10% {
+    background-color: #313337;
+  }
+  20% {
+    background-color: #b93b47;
+  }
+  30% {
+    background-color: #4a4f4b;
+  }
+  40% {
+    background-color: $warning-color;
+  }
+  50% {
+    background-color: #6573a2;
+  }
+  60% {
+    background-color: #101012;
+  }
+  70% {
+    background-color: #303540;
+  }
+  80% {
+    background-color: #f23083;
+  }
+  90% {
+    background-color: #5e4036;
+  }
+  100% {
+    background-color: #6aaaa6;
+  }
+}
