--- a/css/sass/layout/_header.scss
+++ b/css/sass/layout/_header.scss
@@ -1,92 +1,92 @@
 @import "../components/status";
 .my-header-inverse {
-    position: relative;
-    width: 100%;
-    min-height: 110px;
-    z-index: 1000;
-    background-color: #f1f1f1;
-    .header-lg {
-        padding: 0;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        box-shadow: 0 1px 5px #fff;
-        background: linear-gradient(to right, #252525, #434343);
-        .my-header-top {
-            height: 40px;
-            width: 100%;
-            transition: all 1s;
-            .info-navbar {
-                height: 40px;
-                padding: 5px 10px;
-                .info-list {
-                    margin: 5px 10px;
-                    font-size: 15px !important;
-                }
-                .social-btn-list {
-                    margin: 0 1rem;
-                    @media only screen and (max-width: 1050px) {
-                        display: none !important;
-                    }
-                }
-            }
+  position: relative;
+  width: 100%;
+  min-height: 110px;
+  z-index: 1000;
+  background-color: #f1f1f1;
+  .header-lg {
+    padding: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    box-shadow: 0 1px 5px #fff;
+    background: linear-gradient(to right, #252525, #434343);
+    .my-header-top {
+      height: 40px;
+      width: 100%;
+      transition: all 1s;
+      .info-navbar {
+        height: 40px;
+        padding: 5px 10px;
+        .info-list {
+          margin: 5px 10px;
+          font-size: 15px !important;
         }
-        .my-header-bottom {
-            height: 70px;
-            width: 100%;
-            //background-color: #35636a;
-            ul {
-                .my-bottom-item {
-                    height: 40px;
-                    margin: 15px 10px;
-                    font-weight: bold;
-                    padding: 5px;
-                    a {
-                        color: #fff;
-                    }
-                    &:hover {
-                        background-color: #f1f1f1;
-                        a {
-                            color: #252525;
-                        }
-                    }
-                }
-            }
+        .social-btn-list {
+          margin: 0 1rem;
+          @media only screen and (max-width: 1050px) {
+            display: none !important;
+          }
         }
+      }
     }
+    .my-header-bottom {
+      height: 70px;
+      width: 100%;
+      //background-color: #35636a;
+      ul {
+        .my-bottom-item {
+          height: 40px;
+          margin: 15px 10px;
+          a {
+            color: #fff;
+            font-weight: bold !important;
+          }
+          &:hover {
+            background-color: #f5f5f5;
+            border-radius: 5px;
+            a {
+              color: #252525;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 .header-sm {
-    height: 70px !important;
-    box-shadow: 0 1px 5px #fff;
+  height: 70px !important;
+  box-shadow: 0 1px 5px #fff;
+  background: linear-gradient(to right, #232526, #414345) !important;
+  .navbar {
+    padding: 0 1rem !important;
     background: linear-gradient(to right, #232526, #414345) !important;
-    .navbar {
-        padding: 0 1rem !important;
-        background: linear-gradient(to right, #232526, #414345) !important;
+  }
+  .nav-item {
+    list-style: none !important;
+    .logo img {
+      margin: 0 !important;
     }
-    .nav-item {
-        list-style: none !important;
-        .logo img {
-            margin: 0 !important;
-        }
-        input {
-            width: 100%;
-            font-size: 20px;
-            font-weight: bold;
-            padding: 5px;
-            color: #fff;
-            &:hover {
-                text-shadow: 0 2px 10px red, 0 -2px 10px white;
-                font-size: 22px;
-            }
-        }
+    input {
+      width: 100%;
+      font-size: 20px;
+      font-weight: bold;
+      padding: 5px;
+      color: #fff;
+      &:hover {
+        text-shadow: 0 2px 10px red, 0 -2px 10px white;
+        font-size: 22px;
+      }
     }
+  }
 }
 
 .my-header-inverse {
-    .info-item {
-        color: #fff;
-        margin: 0 10px;
-    }
+  .info-item {
+    color: #fff;
+    margin: 0 10px;
+  }
 }
