--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -26,6 +26,7 @@
   --danger: #dc3545;
   --light: #f8f9fa;
   --dark: #434343;
+  --white: #f5f5f5;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -1487,6 +1488,22 @@ pre {
   .table-hover .table-dark:hover > th {
     background-color: #bdbdbd; }
 
+.table-white,
+.table-white > th,
+.table-white > td {
+  background-color: #fcfcfc; }
+.table-white th,
+.table-white td,
+.table-white thead th,
+.table-white tbody + tbody {
+  border-color: #fafafa; }
+
+.table-hover .table-white:hover {
+  background-color: #efefef; }
+  .table-hover .table-white:hover > td,
+  .table-hover .table-white:hover > th {
+    background-color: #efefef; }
+
 .table-active,
 .table-active > th,
 .table-active > td {
@@ -2129,6 +2146,30 @@ fieldset:disabled a.btn {
     .btn-dark:not(:disabled):not(.disabled):active:focus, .btn-dark:not(:disabled):not(.disabled).active:focus, .show > .btn-dark.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(95, 95, 95, 0.5); }
 
+.btn-white {
+  color: #212529;
+  background-color: #f5f5f5;
+  border-color: #f5f5f5; }
+  .btn-white:hover {
+    color: #212529;
+    background-color: #e2e2e2;
+    border-color: gainsboro; }
+  .btn-white:focus, .btn-white.focus {
+    color: #212529;
+    background-color: #e2e2e2;
+    border-color: gainsboro;
+    box-shadow: 0 0 0 0.2rem rgba(213, 214, 214, 0.5); }
+  .btn-white.disabled, .btn-white:disabled {
+    color: #212529;
+    background-color: #f5f5f5;
+    border-color: #f5f5f5; }
+  .btn-white:not(:disabled):not(.disabled):active, .btn-white:not(:disabled):not(.disabled).active, .show > .btn-white.dropdown-toggle {
+    color: #212529;
+    background-color: gainsboro;
+    border-color: #d5d5d5; }
+    .btn-white:not(:disabled):not(.disabled):active:focus, .btn-white:not(:disabled):not(.disabled).active:focus, .show > .btn-white.dropdown-toggle:focus {
+      box-shadow: 0 0 0 0.2rem rgba(213, 214, 214, 0.5); }
+
 .btn-outline-primary {
   color: #0074d9;
   border-color: #0074d9; }
@@ -2280,6 +2321,25 @@ fieldset:disabled a.btn {
     border-color: #434343; }
     .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-dark.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(67, 67, 67, 0.5); }
+
+.btn-outline-white {
+  color: #f5f5f5;
+  border-color: #f5f5f5; }
+  .btn-outline-white:hover {
+    color: #212529;
+    background-color: #f5f5f5;
+    border-color: #f5f5f5; }
+  .btn-outline-white:focus, .btn-outline-white.focus {
+    box-shadow: 0 0 0 0.2rem rgba(245, 245, 245, 0.5); }
+  .btn-outline-white.disabled, .btn-outline-white:disabled {
+    color: #f5f5f5;
+    background-color: transparent; }
+  .btn-outline-white:not(:disabled):not(.disabled):active, .btn-outline-white:not(:disabled):not(.disabled).active, .show > .btn-outline-white.dropdown-toggle {
+    color: #212529;
+    background-color: #f5f5f5;
+    border-color: #f5f5f5; }
+    .btn-outline-white:not(:disabled):not(.disabled):active:focus, .btn-outline-white:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-white.dropdown-toggle:focus {
+      box-shadow: 0 0 0 0.2rem rgba(245, 245, 245, 0.5); }
 
 .btn-link {
   font-weight: 400;
@@ -3789,6 +3849,16 @@ input[type="button"].btn-block {
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(67, 67, 67, 0.5); }
 
+.badge-white {
+  color: #212529;
+  background-color: #f5f5f5; }
+  a.badge-white:hover, a.badge-white:focus {
+    color: #212529;
+    background-color: gainsboro; }
+  a.badge-white:focus, a.badge-white.focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(245, 245, 245, 0.5); }
+
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
@@ -3896,6 +3966,15 @@ input[type="button"].btn-block {
     border-top-color: #bdbdbd; }
   .alert-dark .alert-link {
     color: #0a0a0a; }
+
+.alert-white {
+  color: #7f7f7f;
+  background-color: #fdfdfd;
+  border-color: #fcfcfc; }
+  .alert-white hr {
+    border-top-color: #efefef; }
+  .alert-white .alert-link {
+    color: #666666; }
 
 @keyframes progress-bar-stripes {
   from {
@@ -4168,6 +4247,17 @@ input[type="button"].btn-block {
     color: #fff;
     background-color: #232323;
     border-color: #232323; }
+
+.list-group-item-white {
+  color: #7f7f7f;
+  background-color: #fcfcfc; }
+  .list-group-item-white.list-group-item-action:hover, .list-group-item-white.list-group-item-action:focus {
+    color: #7f7f7f;
+    background-color: #efefef; }
+  .list-group-item-white.list-group-item-action.active {
+    color: #fff;
+    background-color: #7f7f7f;
+    border-color: #7f7f7f; }
 
 .close {
   float: right;
@@ -4851,6 +4941,14 @@ button.bg-dark:focus {
   background-color: #2a2a2a !important; }
 
 .bg-white {
+  background-color: #f5f5f5 !important; }
+
+a.bg-white:hover, a.bg-white:focus,
+button.bg-white:hover,
+button.bg-white:focus {
+  background-color: gainsboro !important; }
+
+.bg-white {
   background-color: #fff !important; }
 
 .bg-transparent {
@@ -4909,6 +5007,9 @@ button.bg-dark:focus {
 
 .border-dark {
   border-color: #434343 !important; }
+
+.border-white {
+  border-color: #f5f5f5 !important; }
 
 .border-white {
   border-color: #fff !important; }
@@ -7692,6 +7793,12 @@ a.text-light:hover, a.text-light:focus {
 
 a.text-dark:hover, a.text-dark:focus {
   color: #1d1d1d !important; }
+
+.text-white {
+  color: #f5f5f5 !important; }
+
+a.text-white:hover, a.text-white:focus {
+  color: #cfcfcf !important; }
 
 .text-body {
   color: #212529 !important; }
