--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -1,335 +1,427 @@
 /*Faded swiper*/
 
 .top-img-container {
-    position: relative;
-    max-width: 100%;
+  position: relative;
+  max-width: 100%;
+  width: 100%;
+  height: calc(100vh - 110px);
+  @media only screen and (max-width: 768px) {
+    height: calc(100vh - 70px);
+  }
+  min-height: 500px;
+  background-position: center;
+  background-attachment: fixed;
+  //background: url(/images/111.jpeg);
+  .overlay {
     width: 100%;
-    height: calc(100vh - 110px);
+    height: 100%;
+    position: absolute;
+    opacity: 0.5;
+    background-color: #c4dadb;
+  }
+  .top-img-container-caption {
+    position: absolute;
+    margin: 20px auto;
+    padding: 1rem;
+    width: 40%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media only screen and (max-width: 1000px) {
+      padding: 25px;
+    }
     @media only screen and (max-width: 768px) {
-        height: calc(100vh - 70px);
+      width: 100%;
     }
-    min-height: 500px;
-    background-position: center;
-    //background: url(/images/111.jpeg);
-    .overlay {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        opacity: 0.5;
-        background-color: #c4dadb;
+    h1,
+    h3 {
+      color: gold;
+      text-shadow: 0 2px 1px #fff, 0 -3px 4px #fff;
+      text-align: center;
+      font-weight: bold;
     }
-    .top-img-container-caption {
-        position: absolute;
-        margin: 20px auto;
-        padding: 1rem;
-        width: 40%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        @media only screen and (max-width: 1000px) {
-            padding: 25px;
-        }
-        @media only screen and (max-width: 768px) {
-            width: 100%;
-        }
-        h1,
-        h3 {
-            color: gold;
-            text-shadow: 0 2px 1px #fff, 0 -3px 4px #fff;
-            text-align: center;
-            font-weight: bold;
-        }
-        b {
-            line-height: 2;
-            text-align: center;
-            font-size: 1rem;
-            @media only screen and (max-width: 768px) {
-                font-size: 14px;
-            }
-        }
-        .contact-us {
-            margin: 25px auto;
-            padding: 8px 20px;
-            border-radius: 30px;
-            border: 2px solid #fff;
-            color: #000;
-        }
+    b {
+      line-height: 2;
+      text-align: center;
+      font-size: 1rem;
+      @media only screen and (max-width: 768px) {
+        font-size: 14px;
+      }
     }
+    .contact-us {
+      margin: 25px auto;
+      padding: 8px 20px;
+      border-radius: 30px;
+      border: 2px solid #fff;
+      color: #000;
+    }
+  }
 }
 
 $head-with-border-bg: linear-gradient(to right, #232526, #414345);
 .head-with-border {
-    position: relative;
-    z-index: 2;
-    h2,
-    h1 {
-        text-align: center;
-        //background: linear-gradient(to right, #a62a2a, #dc3545);
-        background: $head-with-border-bg;
-        color: #fff;
-        margin: 30px auto 15px auto;
-        border-radius: 5px;
-        width: 250px;
-        padding: 10px 15px;
-        &:before {
-            content: "";
-            width: 100%;
-            height: 1px;
-            //background-color: #a62a2a;
-            background: $head-with-border-bg;
-            position: absolute;
-            left: 0;
-            top: 50%;
-            z-index: -1;
-        }
+  position: relative;
+  z-index: 2;
+  h2,
+  h1 {
+    text-align: center;
+    //background: linear-gradient(to right, #a62a2a, #dc3545);
+    background: $head-with-border-bg;
+    color: #fff;
+    margin: 30px auto 15px auto;
+    border-radius: 5px;
+    width: 250px;
+    padding: 10px 15px;
+    &:before {
+      content: "";
+      width: 100%;
+      height: 1px;
+      //background-color: #a62a2a;
+      background: $head-with-border-bg;
+      position: absolute;
+      left: 0;
+      top: 50%;
+      z-index: -1;
     }
+  }
 }
 
 .who-us,
 .why-us {
-    .who-us-body {
-        padding: 5px 40px;
-        line-height: 2;
-    }
+  .who-us-body {
+    padding: 5px 40px;
+    line-height: 2;
+  }
 }
 
 .who-us {
-    .swiper-container {
-        width: 100%;
-        height: 400px;
-        position: relative !important;
-        @media only screen and (max-width: 480px) {
-            height: 500px;
-        }
-        .col-sm-6 {
-            width: 50%;
-        }
-        .swiper-wrapper {
-            height: 350px;
-            width: 100%;
-            margin-bottom: 20px;
-            @media only screen and (max-width: 480px) {
-                height: 450px;
-            }
-        }
-        .swiper-pagination {
-            @media only screen and (max-width: 480px) {
-                bottom: 50px;
-            }
-        }
-        .swiper-slide {
-            //margin: 0 25px !important;
-            background-position: center;
-            background-size: cover;
-        }
-        .swiper-button-white {
-            //display: none;
-            position: absolute;
-            top: 175px !important;
-            color: #35636a !important;
-            @media only screen and (max-width: 480px) {
-                top: 225px !important;
-            }
-        }
-        .slide-content {
-            background-position: center;
-            background-size: cover;
-            background-color: #f1f1f1;
-            img {
-                width: 100%;
-                height: 350px;
-                max-height: 350px;
-            }
-            .caption {
-                width: 100%;
-                @media only screen and (max-width: 768px) {
-                    text-align: center;
-                }
-                height: 350px;
-                max-height: 350px;
-                z-index: 1000;
-                .caption-title {
-                    padding-top: 1rem;
-                    color: #35636a;
-                }
-                .text {
-                    padding: 10px;
-                }
-                .btn {
-                    border-radius: 50px;
-                    padding: 10px;
-                    @media only screen and (min-width: 768px) {
-                        margin: 5px 0 0 0.5rem;
-                    }
-                    @media only screen and (max-width: 768px) {
-                        margin-top: 5px;
-                    }
-                    //background: linear-gradient(to right, #a62a2a, #dc3545);
-                    //color: #fff;
-                }
-            }
-        }
-        .swiper-pagination-bullet {
-            width: 12px;
-            height: 12px;
-        }
-        .swiper-pagination-bullet-active {
-            background-color: #35636a !important;
-        }
+  .swiper-container {
+    width: 100%;
+    height: 400px;
+    position: relative !important;
+    @media only screen and (max-width: 480px) {
+      height: 500px;
     }
+    .col-sm-6 {
+      width: 50%;
+    }
+    .swiper-wrapper {
+      height: 350px;
+      width: 100%;
+      margin-bottom: 20px;
+      @media only screen and (max-width: 480px) {
+        height: 450px;
+      }
+    }
+    .swiper-pagination {
+      @media only screen and (max-width: 480px) {
+        bottom: 50px;
+      }
+    }
+    .swiper-slide {
+      //margin: 0 25px !important;
+      background-position: center;
+      background-size: cover;
+    }
+    .swiper-button-white {
+      //display: none;
+      position: absolute;
+      top: 175px !important;
+      color: #35636a !important;
+      @media only screen and (max-width: 480px) {
+        top: 225px !important;
+      }
+    }
+    .slide-content {
+      background-position: center;
+      background-size: cover;
+      background-color: #f1f1f1;
+      img {
+        width: 100%;
+        height: 350px;
+        max-height: 350px;
+      }
+      .caption {
+        width: 100%;
+        @media only screen and (max-width: 768px) {
+          text-align: center;
+        }
+        height: 350px;
+        max-height: 350px;
+        z-index: 1000;
+        .caption-title {
+          padding-top: 1rem;
+          color: #35636a;
+        }
+        .text {
+          padding: 10px;
+        }
+        .btn {
+          border-radius: 50px;
+          padding: 10px;
+          @media only screen and (min-width: 768px) {
+            margin: 5px 0 0 0.5rem;
+          }
+          @media only screen and (max-width: 768px) {
+            margin-top: 5px;
+          }
+          //background: linear-gradient(to right, #a62a2a, #dc3545);
+          //color: #fff;
+        }
+      }
+    }
+    .swiper-pagination-bullet {
+      width: 12px;
+      height: 12px;
+    }
+    .swiper-pagination-bullet-active {
+      background-color: #35636a !important;
+    }
+  }
 }
 
 .why-us {
+  position: relative;
+  .swiper-cube {
+    width: 350px;
+    height: 350px;
+    margin: 2rem auto;
+    @media only screen and (min-width: 1000px) {
+      margin: 4rem auto;
+    }
+    .why-us-btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 3rem auto;
+    }
+    .swiper-pagination-bullets {
+      display: list-item;
+      list-style: none;
+      bottom: 0 !important;
+      width: auto;
+      position: absolute;
+      left: 94%;
+      top: 40%;
+    }
+    .swiper-pagination-bullet {
+      display: block;
+      margin-top: 5px;
+    }
+  }
+  .swiper-slide {
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    width: 100%;
+  }
+  .cube-container {
     position: relative;
-    .swiper-cube {
-        width: 300px;
-        height: 300px;
-        margin: 0 auto;
-        .swiper-pagination-bullets {
-            display: list-item;
-            list-style: none;
-            bottom: 0 !important;
-            width: auto;
-            position: absolute;
-            left: 94%;
-            top: 40%;
-        }
-        .swiper-pagination-bullet {
-            display: block;
-            margin-top: 5px;
-        }
+    margin: 3rem 0 !important;
+  }
+  .why-us-text {
+    line-height: 2;
+    padding: 10px 3rem !important;
+    @media only screen and (max-width: 768px) {
+      padding: 1rem !important;
     }
-    .swiper-slide {
-        background-position: center;
-        background-size: cover;
-        width: 100%;
+    .btn {
+      width: 150px;
+      border-radius: 50px;
+      margin: 40px auto;
+      @media only screen and (max-width: 768px) {
+        margin: 1.5rem auto 0 auto !important;
+      }
     }
-    .cube-container {
-        position: relative;
-        margin: 3rem 0 !important;
+    b {
+      margin-left: 0.5rem;
+      display: block;
     }
-    .why-us-text {
-        line-height: 2;
-        padding: 10px 3rem !important;
-        @media only screen and (max-width: 768px) {
-            padding: 1rem !important;
-        }
-        .btn {
-            width: 150px;
-            border-radius: 50px;
-            margin: 40px auto;
-            @media only screen and (max-width: 768px) {
-                margin: 1.5rem auto 0 auto !important;
-            }
-        }
-    }
+  }
 }
 
 .services {
-    .service-box {
-        .service-title {
-            margin-left: 5px;
-        }
-    }
-}
-
-.projects {
+  background-image: url("/images/service-backgroung.jpg");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  .service-box {
+    @include prefixer(animation, fadeInOut 3s infinite linear, webkit moz);
+    border: 1px solid #fff;
+    color: #fff;
+    font-weight: bold;
+    padding: 0.5rem;
+    min-height: 200px;
     position: relative;
-    /* 3D effect swiper*/
-    .swiper-3d {
-        position: relative;
-        width: 100%;
-        padding-top: 50px;
-        padding-bottom: 50px;
-        overflow: hidden;
-        left: 25px;
-        .swiper-slide {
-            background-position: center;
-            background-size: cover;
-            width: 300px;
-            height: 300px;
-            img {
-                width: 250px;
-                height: 300px;
-            }
-        }
-        .swiper-pagination-bullet {
-            width: 12px;
-            height: 12px;
-        }
-        .swiper-pagination-bullet-active {
-            background-color: #35636a !important;
-        }
+    height: auto;
+    &:hover {
+      background-color: #fff;
+      color: #000;
+      opacity: 0.5;
     }
-    .btn-projects {
-        position: absolute;
-        top: 50%;
-        left: 0px;
-        margin: 0 10px;
-        width: 150px;
-        justify-content: center;
-        align-items: center;
-        border-radius: 45px;
-        box-shadow: 0 25px 25px #f1f1f1, 0 -25px 25px #f1f1f1;
+    @media only screen and (max-width: 768px) {
+      min-height: 250px;
     }
+    .service-title {
+      font-size: 1.25rem;
+    }
+    .service-desc {
+      margin-top: 1.25rem;
+    }
+    .link {
+      position: absolute;
+      bottom: 1rem;
+      width: 6rem;
+      left: calc(50% - 3rem);
+    }
+  }
+  .btn-special {
+    border: 1px solid #fff;
+    color: #fff;
+    border-radius: 45px;
+
+    &:hover {
+      @include prefixer(animation, fadeInOut 8s infinite linear, webkit moz);
+      background-color: #fff;
+      color: #000;
+      opacity: 0.5;
+    }
+  }
 }
 
 .our-clients {
-    .client-box {
-        position: relative;
-        .client-img {
-            max-width: 100%;
-            width: auto;
-            height: 200px;
-        }
-        .client-text {
-            margin: 0 0.5rem;
-        }
+  .client-box {
+    position: relative;
+    min-height: 330px;
+    box-shadow: 0 2px 8px;
+    .client-img {
+      max-width: 100%;
+      width: auto;
+      height: 200px;
     }
+    .client-text {
+      margin: 0 0.5rem;
+    }
+    .link {
+      display: flex;
+      position: absolute;
+      bottom: 20px;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      margin: auto;
+      width: 100%;
+    }
+  }
 }
 
-.shop-with-us {
-    .shop-box {
-        position: relative;
-        padding: 5px;
-        .shop-img {
-            max-width: 100%;
-            width: 100%;
-            height: 300px;
-            &:hover {
-                @include prefixer(animation, fadeInOut 3s infinite linear, webkit moz);
-            }
-            @media only screen and (max-width: 768px) {
-                height: 200px;
-            }
-        }
-        .link {
-            color: $primary-color;
-            text-decoration: none;
-        }
+.our-technology {
+  position: relative;
+  //animation: bgcolors infinite 15s;
+  /* 3D effect swiper*/
+  .swiper-3d {
+    position: relative;
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    overflow: hidden;
+    left: 25px;
+    .swiper-slide {
+      background-position: center;
+      background-size: cover;
+      width: 300px;
+      height: 300px;
+      img {
+        width: 250px;
+        height: 300px;
+      }
     }
+    .swiper-slide-active {
+    }
+    .swiper-pagination-bullets {
+      left: -25px !important;
+    }
+    .swiper-pagination-bullet {
+      width: 12px;
+      height: 12px;
+      @media only screen and (max-width: 768px) {
+        width: 10px;
+        height: 10px;
+      }
+    }
+    .swiper-pagination-bullet-active {
+      background-color: $primary-color;
+    }
+  }
+  .btn-projects {
+    position: absolute;
+    top: 50%;
+    left: 0px;
+    margin: 0 10px;
+    width: 150px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 45px;
+    box-shadow: 0 25px 25px #f1f1f1, 0 -25px 25px #f1f1f1;
+  }
+}
+
+.amazing-works {
+  //animation: bgcolors infinite 15s;
+  background: linear-gradient(
+    to left,
+    #121212,
+    #454545,
+    #121212,
+    #121212,
+    #121212,
+    #121212
+  );
+  .work-box {
+    position: relative;
+    padding: 5px;
+    &:hover {
+      margin-top: -8px;
+    }
+    .work-img {
+      max-width: 100%;
+      width: 100%;
+      height: 300px;
+      &:hover {
+        @include prefixer(animation, fadeInOut 3s infinite linear, webkit moz);
+      }
+      @media only screen and (max-width: 768px) {
+        height: 200px;
+      }
+    }
+    .link {
+      color: $primary-color;
+      text-decoration: none;
+    }
+  }
 }
 
 .my-location {
-    #map {
-        width: 100%;
-        height: 400px;
-        background-color: grey;
-    }
+  #map {
+    width: 100%;
+    height: 400px;
+    background-color: grey;
+  }
 }
-
 
 /* animation keyframe */
 
 @include keyFrame(fadeInOut) {
-    0% {
-        opacity: 0.5;
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0.5;
-    }
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
 }
