--- a/css/sass/style.css
+++ b/css/sass/style.css
@@ -1,17 +1,30 @@
 /*
-** for hide or remove section from our html page
-*/
-/* 
-** Overlay : all overlay in our site must have these properties 
-*/
-/*
-** Prefixes Mixin
-** Auto Add Prefixes To Properties
-*/
-/*
 ** Animation Mixin
 ** Auto Add Prefixes To Animation
 */
+@keyframes bgcolors {
+  0% {
+    background-color: #017aba; }
+  10% {
+    background-color: #313337; }
+  20% {
+    background-color: #b93b47; }
+  30% {
+    background-color: #4a4f4b; }
+  40% {
+    background-color: #ffc107 !important; }
+  50% {
+    background-color: #6573a2; }
+  60% {
+    background-color: #101012; }
+  70% {
+    background-color: #303540; }
+  80% {
+    background-color: #f23083; }
+  90% {
+    background-color: #5e4036; }
+  100% {
+    background-color: #6aaaa6; } }
 .active {
   background: linear-gradient(to left, #6a2b31, #dc3545);
   color: #f8f9fa !important;
@@ -51,13 +64,13 @@
       width: 100%; }
       .my-header-inverse .header-lg .my-header-bottom ul .my-bottom-item {
         height: 40px;
-        margin: 15px 10px;
-        font-weight: bold;
-        padding: 5px; }
+        margin: 15px 10px; }
         .my-header-inverse .header-lg .my-header-bottom ul .my-bottom-item a {
-          color: #fff; }
+          color: #fff;
+          font-weight: bold !important; }
         .my-header-inverse .header-lg .my-header-bottom ul .my-bottom-item:hover {
-          background-color: #f1f1f1; }
+          background-color: #f5f5f5;
+          border-radius: 5px; }
           .my-header-inverse .header-lg .my-header-bottom ul .my-bottom-item:hover a {
             color: #252525; }
 
@@ -99,10 +112,10 @@
 
 .header-toggle-btn {
   /*
-  @media screen and (max-width:768px) {
-      display: none !important;
-  }
-  */ }
+    @media screen and (max-width:768px) {
+        display: none !important;
+    }
+    */ }
   .header-toggle-btn span {
     display: block;
     width: 30px;
@@ -130,16 +143,11 @@
   padding-left: 0px !important;
   padding-right: 0px !important; }
 
-/*
-.btn {
-    &:active {
-        border-color: #000;
-    }
-    &:focus {
-        border-color: #000;
-    }
-}
-*/
+.btn:active {
+  border-color: #000; }
+.btn:focus {
+  border-color: #ffc107 !important !important; }
+
 .my-btn {
   background-color: rgba(63, 81, 181, 0.7);
   color: #007bff !important;
@@ -161,9 +169,6 @@
     border-radius: 45px; }
   .btn-shadow:focus {
     box-shadow: 0px 1px 5px #a62a2a, 0px -1px 5px #a62a2a; }
-
-.btn:focus {
-  box-shadow: 0px 1px 5px #a62a2a, 0px -1px 5px #a62a2a; }
 
 .box-shadow {
   box-shadow: 0px 1px 5px #a62a2a, 0px -1px 5px #a62a2a; }
@@ -216,7 +221,7 @@ h1 {
       font-size: 1.5rem; } }
 
 h2 {
-  font-size: 1.75rem; }
+  font-size: 1.5rem; }
   @media only screen and (max-width: 768px) {
     h2 {
       font-size: 1.25rem; } }
@@ -231,10 +236,10 @@ h4 {
   font-size: 1.25rem; }
   @media only screen and (max-width: 768px) {
     h4 {
-      font-size: .85rem; } }
+      font-size: 0.85rem; } }
 
 h5 {
-  font-size: .75rem; }
+  font-size: 0.75rem; }
 
 .logo {
   position: relative; }
@@ -335,7 +340,8 @@ h5 {
 
 .footer {
   transition: all 0.5s;
-  position: relative; }
+  position: relative;
+  animation: bgcolors infinite 30s; }
   .footer p,
   .footer h3,
   .footer h4,
@@ -351,8 +357,7 @@ h5 {
     padding: 5px 0; }
   .footer .footer-top {
     height: auto;
-    padding: 40px 0 30px 0;
-    background: linear-gradient(to right, #232526, #414345); }
+    padding: 40px 0 30px 0; }
     .footer .footer-top .container {
       width: 100%;
       height: 100%; }
@@ -427,7 +432,6 @@ h5 {
       text-align: center; }
   .footer .footer-bottom-text {
     text-align: center;
-    background: linear-gradient(to right, #232526, #414345);
     line-height: 50px;
     box-shadow: 0 1px 3px #fff, 0 -1px 4px #fff;
     color: #000 !important;
