--- a/css/sass/layout/_header.scss
+++ b/css/sass/layout/_header.scss
@@ -27,7 +27,7 @@
         .social-btn-list {
           margin: 0 1rem;
           @media only screen and (max-width: 1050px) {
-            display: none !important;
+            //display: none !important;
           }
         }
       }
