--- a/css/sass/style.css
+++ b/css/sass/style.css
@@ -73,11 +73,13 @@
 
 .header-sm {
   height: 70px !important;
-  box-shadow: 0 1px 5px #fff;
   background: linear-gradient(to right, #232526, #414345) !important; }
   .header-sm .navbar {
     padding: 0 1rem !important;
-    background: linear-gradient(to right, #232526, #414345) !important; }
+    background: linear-gradient(to right, #232526, #414345) !important;
+    box-shadow: 0 1px 5px #fff; }
+    .header-sm .navbar .navbar-toggler {
+      border-color: #f1f1f1; }
   .header-sm .nav-item {
     list-style: none !important; }
     .header-sm .nav-item .logo img {
