--- a/css/sass/components/_logos.scss
+++ b/css/sass/components/_logos.scss
@@ -1,8 +1,9 @@
 .logo {
-    position: relative;
-    img {
-        width: 120px;
-        height: 70px;
-        margin: 0 1rem;
-    }
+  position: relative;
+  cursor: pointer;
+  img {
+    width: 120px;
+    height: 70px;
+    margin: 0 1rem;
+  }
 }
