--- a/css/COMPILED-PAGES/about.css
+++ b/css/COMPILED-PAGES/about.css
@@ -1,4 +1,3 @@
-@import url(../sass/swiper.min.css);
 /*!
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -8425,351 +8424,128 @@ body {
     display: none !important;
     height: 0px !important;
     width: 0px !important; } }
-/*Faded swiper*/
-.top-img-container {
-  position: relative;
-  max-width: 100%;
-  width: 100%;
-  height: calc(100vh - 110px);
-  min-height: 500px;
-  background-position: center;
-  background-attachment: fixed; }
-  @media only screen and (max-width: 768px) {
-    .top-img-container {
-      height: calc(100vh - 70px); } }
-  .top-img-container .overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    opacity: 0.5;
-    background-color: #c4dadb; }
-  .top-img-container .top-img-container-caption {
-    position: absolute;
-    margin: 20px auto;
-    padding: 1rem;
-    width: 40%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    @media only screen and (max-width: 1000px) {
-      .top-img-container .top-img-container-caption {
-        padding: 25px; } }
-    @media only screen and (max-width: 768px) {
-      .top-img-container .top-img-container-caption {
-        width: 100%; } }
-    .top-img-container .top-img-container-caption h1,
-    .top-img-container .top-img-container-caption h3 {
-      color: gold;
-      text-shadow: 0 2px 1px #fff, 0 -3px 4px #fff;
-      text-align: center;
-      font-weight: bold; }
-    .top-img-container .top-img-container-caption b {
-      line-height: 2;
-      text-align: center;
-      font-size: 1rem; }
-      @media only screen and (max-width: 768px) {
-        .top-img-container .top-img-container-caption b {
-          font-size: 14px; } }
-    .top-img-container .top-img-container-caption .contact-us {
-      margin: 25px auto;
-      padding: 8px 20px;
-      border-radius: 30px;
-      border: 2px solid #fff;
-      color: #000; }
-
-.head-with-border {
-  position: relative;
-  z-index: 2; }
-  .head-with-border h2,
-  .head-with-border h1 {
-    text-align: center;
-    background: linear-gradient(to right, #232526, #414345);
-    color: #fff;
-    margin: 30px auto 15px auto;
-    border-radius: 5px;
-    width: 250px;
-    padding: 10px 15px; }
-    .head-with-border h2:before,
-    .head-with-border h1:before {
+.about-container {
+  padding: 2rem; }
+  .about-container .left-about {
+    padding: 0.5rem;
+    position: relative;
+    width: calc(280px + 1rem); }
+    .about-container .left-about .left-img .img {
+      width: 280px;
+      height: 250px;
+      border-radius: 50%;
+      position: relative; }
+      .about-container .left-about .left-img .img img {
+        width: 225px;
+        height: 225px;
+        border-radius: 50%;
+        border: 0.5rem solid #eee;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        margin: auto; }
+    .about-container .left-about .left-img .img::before {
       content: "";
       width: 100%;
-      height: 1px;
-      background: linear-gradient(to right, #232526, #414345);
       position: absolute;
-      left: 0;
+      height: 50%;
       top: 50%;
-      z-index: -1; }
-
-.who-us .who-us-body,
-.why-us .who-us-body {
-  padding: 5px 40px;
-  line-height: 2; }
-
-.who-us .swiper-container {
-  width: 100%;
-  height: 400px;
-  position: relative !important; }
-  @media only screen and (max-width: 480px) {
-    .who-us .swiper-container {
-      height: 500px; } }
-  .who-us .swiper-container .col-sm-6 {
-    width: 50%; }
-  .who-us .swiper-container .swiper-wrapper {
-    height: 350px;
-    width: 100%;
-    margin-bottom: 20px; }
-    @media only screen and (max-width: 480px) {
-      .who-us .swiper-container .swiper-wrapper {
-        height: 450px; } }
-  @media only screen and (max-width: 480px) {
-    .who-us .swiper-container .swiper-pagination {
-      bottom: 50px; } }
-  .who-us .swiper-container .swiper-slide {
-    background-position: center;
-    background-size: cover; }
-  .who-us .swiper-container .swiper-button-white {
-    position: absolute;
-    top: 175px !important;
-    color: #35636a !important; }
-    @media only screen and (max-width: 480px) {
-      .who-us .swiper-container .swiper-button-white {
-        top: 225px !important; } }
-  .who-us .swiper-container .slide-content {
-    background-position: center;
-    background-size: cover;
-    background-color: #f1f1f1; }
-    .who-us .swiper-container .slide-content img {
-      width: 100%;
-      height: 350px;
-      max-height: 350px; }
-    .who-us .swiper-container .slide-content .caption {
-      width: 100%;
-      height: 350px;
-      max-height: 350px;
-      z-index: 1000; }
-      @media only screen and (max-width: 768px) {
-        .who-us .swiper-container .slide-content .caption {
-          text-align: center; } }
-      .who-us .swiper-container .slide-content .caption .caption-title {
-        padding-top: 1rem;
-        color: #35636a; }
-      .who-us .swiper-container .slide-content .caption .text {
-        padding: 10px; }
-      .who-us .swiper-container .slide-content .caption .btn {
-        border-radius: 50px;
-        padding: 10px; }
-        @media only screen and (min-width: 768px) {
-          .who-us .swiper-container .slide-content .caption .btn {
-            margin: 5px 0 0 0.5rem; } }
-        @media only screen and (max-width: 768px) {
-          .who-us .swiper-container .slide-content .caption .btn {
-            margin-top: 5px; } }
-  .who-us .swiper-container .swiper-pagination-bullet {
-    width: 12px;
-    height: 12px; }
-  .who-us .swiper-container .swiper-pagination-bullet-active {
-    background-color: #35636a !important; }
-
-.why-us {
-  position: relative; }
-  .why-us .swiper-cube {
-    width: 350px;
-    height: 350px;
-    margin: 2rem auto; }
-    @media only screen and (min-width: 1000px) {
-      .why-us .swiper-cube {
-        margin: 4rem auto; } }
-    .why-us .swiper-cube .why-us-btn {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 3rem auto; }
-    .why-us .swiper-cube .swiper-pagination-bullets {
-      display: list-item;
-      list-style: none;
-      bottom: 0 !important;
-      width: auto;
-      position: absolute;
-      left: 94%;
-      top: 40%; }
-    .why-us .swiper-cube .swiper-pagination-bullet {
+      left: 0;
+      background-color: #fff;
       display: block;
-      margin-top: 5px; }
-  .why-us .swiper-slide {
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 100%; }
-  .why-us .cube-container {
+      z-index: 0; }
+    .about-container .left-about .left-img .img > * {
+      z-index: 10;
+      position: relative; }
+    .about-container .left-about .left-content {
+      background-color: #fff;
+      padding-bottom: 2rem;
+      margin-bottom: -0.5rem; }
+      .about-container .left-about .left-content .name {
+        text-align: center;
+        color: #007bff !important;
+        font-size: 24px;
+        /*
+        span:nth-child(2) {
+          animation-delay: 0.4s;
+          color: #1c03b5;
+        }
+        span:nth-child(3) {
+          animation-delay: 0.8s;
+          color: #ef394e;
+        }
+        span:nth-child(4) {
+          animation-delay: 1.2s;
+          color: #101012;
+        }
+        span:nth-child(5) {
+          animation-delay: 1.6s;
+          color: #e8b543;
+        }
+        span:nth-child(6) {
+          animation-delay: 2s;
+          color: #f23083;
+        }
+        span:nth-child(7) {
+          animation-delay: 2.4s;
+          color: #313337;
+        }
+        span:nth-child(8) {
+          animation-delay: 2.8s;
+          color: #6aaaa6;
+        }
+        span:nth-child(9) {
+          animation-delay: 3.2s;
+          color: #4a4f4b;
+        }
+        span:nth-child(10) {
+          animation-delay: 3.6s;
+          color: #17a2b8;
+        }
+        span:nth-child(11) {
+          animation-delay: 4s;
+          color: yellow;
+        }
+        span:nth-child(12) {
+          animation-delay: 4.4s;
+          color: crimson;
+        }
+        */ }
+        .about-container .left-about .left-content .name span {
+          display: inline-block; }
+      .about-container .left-about .left-content h3,
+      .about-container .left-about .left-content p {
+        display: block; }
+      .about-container .left-about .left-content h3 {
+        margin: 0 1rem;
+        padding: 1rem 0rem 0.25rem 0rem;
+        border-bottom: 1px solid #000; }
+      .about-container .left-about .left-content p {
+        margin: 0;
+        padding: 0 1rem;
+        display: block; }
+        .about-container .left-about .left-content p .fa-star {
+          color: #807878a3; }
+        .about-container .left-about .left-content p .checked {
+          color: orange; }
+  .about-container .right-about {
     position: relative;
-    margin: 3rem 0 !important; }
-  .why-us .why-us-text {
-    line-height: 2;
-    padding: 10px 3rem !important; }
-    @media only screen and (max-width: 768px) {
-      .why-us .why-us-text {
-        padding: 1rem !important; } }
-    .why-us .why-us-text .btn {
-      width: 150px;
-      border-radius: 50px;
-      margin: 40px auto; }
-      @media only screen and (max-width: 768px) {
-        .why-us .why-us-text .btn {
-          margin: 1.5rem auto 0 auto !important; } }
-    .why-us .why-us-text b {
-      margin-left: 0.5rem;
+    background-color: #fff;
+    margin-top: 133px;
+    padding: 1rem; }
+    .about-container .right-about h2 {
+      margin-top: 1rem;
+      padding: 0.25rem 0;
+      border-bottom: 1px solid #000; }
+    .about-container .right-about p {
       display: block; }
+    .about-container .right-about ul {
+      list-style-type: square;
+      margin-left: 1.25rem; }
 
-.services {
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat; }
-  .services .service-box {
-    -prefixes-animation: fadeInOut 3s infinite linear;
-    animation: fadeInOut 3s infinite linear;
-    border: 1px solid #fff;
-    color: #fff;
-    font-weight: bold;
-    padding: 0.5rem;
-    min-height: 200px;
-    position: relative;
-    height: auto; }
-    .services .service-box:hover {
-      background-color: #fff;
-      color: #000;
-      opacity: 0.5; }
-    @media only screen and (max-width: 768px) {
-      .services .service-box {
-        min-height: 250px; } }
-    .services .service-box .service-title {
-      font-size: 1.25rem; }
-    .services .service-box .service-desc {
-      margin-top: 1.25rem; }
-    .services .service-box .link {
-      position: absolute;
-      bottom: 1rem;
-      width: 6rem;
-      left: calc(50% - 3rem); }
-  .services .btn-special {
-    border: 1px solid #fff;
-    color: #fff;
-    border-radius: 45px; }
-    .services .btn-special:hover {
-      -prefixes-animation: fadeInOut 8s infinite linear;
-      animation: fadeInOut 8s infinite linear;
-      background-color: #fff;
-      color: #000;
-      opacity: 0.5; }
+@keyframes rotateY {
+  0%,
+  80% {
+    transform: rotateY(360deg); } }
 
-.our-clients .client-box {
-  position: relative;
-  min-height: 330px;
-  box-shadow: 0 2px 8px; }
-  .our-clients .client-box .client-img {
-    max-width: 100%;
-    width: auto;
-    height: 200px; }
-  .our-clients .client-box .client-text {
-    margin: 0 0.5rem; }
-  .our-clients .client-box .link {
-    display: flex;
-    position: absolute;
-    bottom: 20px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    width: 100%; }
-
-.our-technology {
-  position: relative;
-  /* 3D effect swiper*/ }
-  .our-technology .swiper-3d {
-    position: relative;
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    overflow: hidden;
-    left: 25px; }
-    .our-technology .swiper-3d .swiper-slide {
-      background-position: center;
-      background-size: cover;
-      width: 300px;
-      height: 300px; }
-      .our-technology .swiper-3d .swiper-slide img {
-        width: 250px;
-        height: 300px; }
-    .our-technology .swiper-3d .swiper-pagination-bullets {
-      left: -25px !important; }
-    .our-technology .swiper-3d .swiper-pagination-bullet {
-      width: 12px;
-      height: 12px; }
-      @media only screen and (max-width: 768px) {
-        .our-technology .swiper-3d .swiper-pagination-bullet {
-          width: 10px;
-          height: 10px; } }
-    .our-technology .swiper-3d .swiper-pagination-bullet-active {
-      background-color: #007bff !important; }
-  .our-technology .btn-projects {
-    position: absolute;
-    top: 50%;
-    left: 0px;
-    margin: 0 10px;
-    width: 150px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 45px;
-    box-shadow: 0 25px 25px #f1f1f1, 0 -25px 25px #f1f1f1; }
-
-.amazing-works {
-  background: linear-gradient(to left, #121212, #454545, #121212, #121212, #121212, #121212); }
-  .amazing-works .work-box {
-    position: relative;
-    padding: 5px; }
-    .amazing-works .work-box:hover {
-      margin-top: -8px; }
-    .amazing-works .work-box .work-img {
-      max-width: 100%;
-      width: 100%;
-      height: 300px; }
-      .amazing-works .work-box .work-img:hover {
-        -prefixes-animation: fadeInOut 3s infinite linear;
-        animation: fadeInOut 3s infinite linear; }
-      @media only screen and (max-width: 768px) {
-        .amazing-works .work-box .work-img {
-          height: 200px; } }
-    .amazing-works .work-box .link {
-      color: #007bff !important;
-      text-decoration: none; }
-
-.my-location #map {
-  width: 100%;
-  height: 400px;
-  background-color: grey; }
-
-/* animation keyframe */
-@-webkit-keyframes fadeInOut {
-  0% {
-    opacity: 0.5; }
-  50% {
-    opacity: 1; }
-  100% {
-    opacity: 0.5; } }
-@-moz-keyframes fadeInOut {
-  0% {
-    opacity: 0.5; }
-  50% {
-    opacity: 1; }
-  100% {
-    opacity: 0.5; } }
-@keyframes fadeInOut {
-  0% {
-    opacity: 0.5; }
-  50% {
-    opacity: 1; }
-  100% {
-    opacity: 0.5; } }
-
-/*# sourceMappingURL=home.css.map */
+/*# sourceMappingURL=about.css.map */
