--- a/css/sass/layout/_header.scss
+++ b/css/sass/layout/_header.scss
@@ -84,6 +84,17 @@
         font-size: 22px;
       }
     }
+    a {
+      width: 100%;
+      font-size: 20px;
+      font-weight: bold;
+      padding: 5px;
+      color: #fff;
+      &:hover {
+        text-shadow: 0 2px 10px red, 0 -2px 10px white;
+        font-size: 22px;
+      }
+    }
   }
 }
 
