--- a/css/sass/style.css
+++ b/css/sass/style.css
@@ -93,6 +93,15 @@
       .header-sm .nav-item input:hover {
         text-shadow: 0 2px 10px red, 0 -2px 10px white;
         font-size: 22px; }
+    .header-sm .nav-item a {
+      width: 100%;
+      font-size: 20px;
+      font-weight: bold;
+      padding: 5px;
+      color: #fff; }
+      .header-sm .nav-item a:hover {
+        text-shadow: 0 2px 10px red, 0 -2px 10px white;
+        font-size: 22px; }
 
 .my-header-inverse .info-item {
   color: #fff;
@@ -241,7 +250,8 @@ h5 {
   font-size: 0.75rem; }
 
 .logo {
-  position: relative; }
+  position: relative;
+  cursor: pointer; }
   .logo img {
     width: 120px;
     height: 70px;
@@ -258,7 +268,7 @@ h5 {
   top: 66px;
   position: sticky;
   background-color: #434343 !important;
-  transition: all 0.5s;
+  transition: all 0.5s !important;
   z-index: 100;
   border: 0 !important; }
   @media screen and (max-width: 767px) {
@@ -338,7 +348,7 @@ h5 {
   background-color: red; }
 
 .footer {
-  transition: all 0.5s;
+  transition: all 0.5s !important;
   position: relative;
   animation: bgcolors infinite 30s; }
   .footer p,
@@ -461,14 +471,14 @@ body {
   padding: 0px !important;
   background-color: #f1f1f1;
   overflow-x: hidden;
-  font-size: 1rem; }
+  font-size: 1rem;
+  transition: all 0.5s !important; }
   @media only screen and (max-width: 768px) {
     html,
     body {
       font-size: 14px; } }
 
 .my-page {
-  min-height: 1500px;
   position: relative; }
 
 @media only screen and (max-width: 1000px) {
