--- a/css/sass/helper/_variables.scss
+++ b/css/sass/helper/_variables.scss
@@ -8,4 +8,5 @@ $dark-color: #434343 !important;
 $muted-color: #6c757d !important;
 $white-color: #fff !important;
 $warning-color: #ffc107 !important;
+$info-color: #17a2b8 !important;
 $transation: all 0.5s !important;
