--- a/css/COMPILED-PAGES/about.css
+++ b/css/COMPILED-PAGES/about.css
@@ -8166,6 +8166,21 @@ h5 {
     height: 70px;
     margin: 0 1rem; }
 
+.fa-youtube:hover {
+  color: #ff0000 !important; }
+
+.fa-facebook:hover {
+  color: #0f90f3 !important; }
+
+.fa-github:hover {
+  color: #000 !important; }
+
+.fa-linkedin:hover {
+  color: #0077b5 !important; }
+
+.fa-instagram:hover {
+  color: #a62a2a !important; }
+
 .clearfix {
   clear: both !important; }
 
