--- a/css/sass/components/_logos.scss
+++ b/css/sass/components/_logos.scss
@@ -7,3 +7,30 @@
     margin: 0 1rem;
   }
 }
+
+.fa-youtube {
+  &:hover {
+    color: #ff0000 !important;
+  }
+}
+.fa-facebook {
+  &:hover {
+    color: #0f90f3 !important;
+  }
+}
+.fa-github {
+  &:hover {
+    color: #000 !important;
+  }
+}
+.fa-linkedin {
+  &:hover {
+    color: #0077b5 !important;
+  }
+}
+
+.fa-instagram {
+  &:hover {
+    color: $danger-color;
+  }
+}
