change our service background

--- a/css/sass/layout/_header.scss
+++ b/css/sass/layout/_header.scss
@@ -52,6 +52,13 @@
             }
           }
         }
+        .my-bottom-item.active {
+          background-color: #f5f5f5;
+          border-radius: 5px;
+          a {
+            color: #252525;
+          }
+        }
       }
     }
   }
